0.9.1 (26-Sep-2014):
* CA-102285: Use the stream API to read the XML RRD file
* Fix 'make install' and 'make uninstall' (by making them PHONY targets)

0.9.0 (6-Jun-2013):
* first public release
